--- a/templates/index.html
+++ b/templates/index.html
@@ -10,21 +10,23 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
   </head>
-  <body>
+  <body style="background-color:#2E2E2E">
+    <font color="#ffe599" style="font-family:Segoe UI">
+    <!-- Add Jumbotron to Header -->
+    <div class="jumbotron text-center" style="background-color:#000000">
+      <h1> <u>Mission to Mars</u></h1>
+      <!-- Add a button to activate scraping script -->
+      <p><a class="btn btn-danger btn-lg active" href="/scrape" role="button">&#128640 Scrape New Data &#128640</a></p>
+    </div>
     <div class="container">
-      <!-- Add Jumbotron to Header -->
-      <div class="jumbotron text-center">
-        <h1>Mission to Mars</h1>
-        <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
-      </div>
+      
 
       <!-- Add section for Mars News -->
-      <div class="row" id="mars-news">
-        <div class="col-md-12">
+      <div class="row" id="mars-news" >
+        <div class="col-xs-12">
           <div class="media">
             <div class="media-body">
-              <h2>Latest Mars News</h2>
+              <h3>&#128240 <u>Latest Mars News</u> &#128240</h3>
               <h4 class="media-heading">{{ mars.news_title }}</h4>
               <p>{{ mars.news_paragraph }}</p>
             </div>
@@ -35,7 +37,7 @@
       <!-- Section for Featured Image and Facts table -->
       <div class="row" id="mars-featured-image">
         <div class="col-md-8">
-          <h2>Featured Mars Image</h2>
+          <h3>&#127756 <u>Featured Mars Image</u> &#127756</h3>
 
           <!-- if images is False/None/non-existent, then default to error message -->
           <img
@@ -48,7 +50,7 @@
         <div class="col-md-4">
           <!-- Mars Facts -->
           <div class="row" id="mars-facts">
-            <h4>Mars Facts</h4>
+            <h3 class="text-center">&#128203 <u>Mars Facts</u> &#128203</h3>
             {{ mars.facts | safe }}
           </div>
         </div>
@@ -57,11 +59,11 @@
       <!-- Section for Mars Hemispheres -->
       <div class="row" id="mars-hemispheres">
         <div class="page-header">
-          <h2 class="text-center">Mars Hemispheres</h2>
+          <h3 class="text-center">&#127763 <u>Mars Hemispheres</u> &#127767</h3>
         </div>
 
         {% for hemisphere in mars.hemispheres %}
-        <div class="col-md-6">
+        <div class="col-xs-6">
           <div class="thumbnail">
             <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
             <div class="caption">
@@ -72,5 +74,6 @@
         {% endfor %}
       </div>
     </div>
+    </font>
   </body>
 </html>
